concourse/concourse_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: concourse
  name: concourse
