concourse/concourse_ingress_route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: concourse
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`concourse.10.237.198.16.xip.io`)
      kind: Rule
      services:
        - name: concourse-web
          port: 8080
          namespace: concourse
